samples/errors/func-type-unresolvable.stkn
unresolvable(false)

func unresolvable(x)
    ifnot x
        return unresolvable(!x)
    return unresolvable(false)
